# pyclickutils

./: .gitignore  GEMINI.md  README.md  ToDo.md  archive_file.py  mise.toml  pyproject.toml
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _socket.data.json  _socket.meta.json  (+190 more)
.mypy_cache/3.11/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  doctest.meta.json  fixtures.data.json  fixtures.meta.json  freeze_support.data.json  freeze_support.meta.json  helpconfig.data.json  helpconfig.meta.json  hookspec.data.json  hookspec.meta.json  legacypath.data.json  legacypath.meta.json  logging.data.json  logging.meta.json  main.data.json  main.meta.json  monkeypatch.data.json  monkeypatch.meta.json  nodes.data.json  nodes.meta.json  outcomes.data.json  outcomes.meta.json  pathlib.data.json  pathlib.meta.json  (+34 more)
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.11/asyncclick/: __init__.data.json  __init__.meta.json  _compat.data.json  _compat.meta.json  core.data.json  (+21 more)
archives/: 20250920-205331-Tasks-done.md  20250921-221355-Tasks-done.md  20250921-221715-Tasks-done.md  20250921-222206-Tasks-done.md  20250921-223600-Tasks-done.md  20250921-224235-Plan-done.md  20250921-224239-Tasks-done.md  Plan-20250918-185810.md  Tasks-20250918-183733.md  Tasks-20250918-185515.md  Tasks-20250918-210059.md  ToDo-20250918-185856.md  ToDo-20250918-210110.md
samples/: sample1-simple.py  sample2-arg-opt.py  sample3-subs.py  sample4-async.py  sample5.py
src/pyclickutils/: __init__.py  __main__.py  my_logger.py  mylogger.py  pyclickutils.py  version.py
tests/: _testbase_cli.py  conftest.py  conftest_01_basic.py  conftest_02_interactive.py  test_00_archive_file.py  test_00_confitest.py  test_00_conftest_01_basic.py  test_00_conftest_02_interactive.py  test_01_samples.py  test_archive_file.py  test_samples.py
(+314 files in other folders)
