[project]
name = "pyclickutils"
dynamic = ["version"]
description = "utilities for `click`"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.11.0",
    "asyncclick>=8.3.0.2",
    "asyncio>=4.0.0",
    "click>=8.2.1",
    "types-click>=7.1.8",
    "typing>=3.10.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.18.1",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
    "pytest>=8.2.2",
]

[project.scripts]
pyclickutils = "pyclickutils.__main__:cli"

[tool.ruff]
line-length = 78
target-version  = "py311"
exclude = ["test/data"]

[tool.mypy]
python_version = "3.11"
