[project]
name = "pyclickutils"
dynamic = ["version"]
description = "utilities for `click`"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "types-click>=7.1.8",
    "typing>=3.10.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.18.1",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
    "pytest>=8.2.2",
    "asyncio>=4.0.0",
]

[project.scripts]
pyclickutils = "pyclickutils.__main__:cli"

[tool.ruff]
line-length = 78
target-version  = "py311"
exclude = ["test/data"]
